--- a/Guidomia/Modules/CarListView/CustomCells/HeaderTableViewCell.xib
+++ b/Guidomia/Modules/CarListView/CustomCells/HeaderTableViewCell.xib
@@ -11,8 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" ambiguous="YES" id="iN0-l3-epB" customClass="HeaderTableViewCell" customModule="Guidomia" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="517" height="340"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="HeaderTableViewCell" customModule="Guidomia" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="517" height="349"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tlh-dG-mcx">
@@ -48,10 +48,10 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vcX-uZ-4YD">
-                    <rect key="frame" x="0.0" y="178" width="517" height="151"/>
+                    <rect key="frame" x="0.0" y="178" width="517" height="166"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g8v-Pd-9C9">
-                            <rect key="frame" x="10" y="10" width="497" height="131"/>
+                            <rect key="frame" x="10" y="10" width="497" height="146"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filters" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uSv-uJ-Xl3">
                                     <rect key="frame" x="10" y="10" width="47" height="21"/>
@@ -61,15 +61,15 @@
                                 </label>
                                 <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Any make" translatesAutoresizingMaskIntoConstraints="NO" id="ZsL-kj-rmw">
                                     <rect key="frame" x="0.0" y="33" width="497" height="51"/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" name="DarkGray"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
                                         <outlet property="delegate" destination="iN0-l3-epB" id="kms-nm-2Up"/>
                                     </connections>
                                 </searchBar>
-                                <searchBar contentMode="redraw" placeholder="Any model" translatesAutoresizingMaskIntoConstraints="NO" id="H5e-dK-kTM">
+                                <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Any model" translatesAutoresizingMaskIntoConstraints="NO" id="H5e-dK-kTM">
                                     <rect key="frame" x="0.0" y="84" width="497" height="51"/>
-                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" name="DarkGray"/>
                                     <textInputTraits key="textInputTraits"/>
                                     <connections>
                                         <outlet property="delegate" destination="iN0-l3-epB" id="nzY-x9-YvZ"/>
@@ -80,20 +80,19 @@
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="ZsL-kj-rmw" secondAttribute="trailing" id="7Ry-70-gen"/>
                                 <constraint firstItem="H5e-dK-kTM" firstAttribute="top" secondItem="ZsL-kj-rmw" secondAttribute="bottom" id="MQw-Rf-ZGW"/>
+                                <constraint firstAttribute="bottom" secondItem="H5e-dK-kTM" secondAttribute="bottom" constant="11" id="azD-90-gs6"/>
                                 <constraint firstAttribute="trailing" secondItem="H5e-dK-kTM" secondAttribute="trailing" id="bTM-63-eTH"/>
                                 <constraint firstItem="uSv-uJ-Xl3" firstAttribute="top" secondItem="g8v-Pd-9C9" secondAttribute="top" constant="10" id="cUK-1j-NXd"/>
                                 <constraint firstItem="ZsL-kj-rmw" firstAttribute="top" secondItem="uSv-uJ-Xl3" secondAttribute="bottom" constant="2" id="dRv-EZ-Xzp"/>
                                 <constraint firstItem="H5e-dK-kTM" firstAttribute="leading" secondItem="g8v-Pd-9C9" secondAttribute="leading" id="jzG-1V-6jx"/>
                                 <constraint firstItem="uSv-uJ-Xl3" firstAttribute="leading" secondItem="g8v-Pd-9C9" secondAttribute="leading" constant="10" id="mle-W0-BqU"/>
                                 <constraint firstItem="ZsL-kj-rmw" firstAttribute="leading" secondItem="g8v-Pd-9C9" secondAttribute="leading" id="qSX-zU-Iuz"/>
-                                <constraint firstAttribute="bottom" secondItem="H5e-dK-kTM" secondAttribute="bottom" constant="-4" id="zS5-DF-sY4"/>
                             </constraints>
                         </view>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <constraints>
                         <constraint firstItem="g8v-Pd-9C9" firstAttribute="leading" secondItem="vcX-uZ-4YD" secondAttribute="leading" constant="10" id="0su-ko-0cZ"/>
-                        <constraint firstAttribute="height" constant="151" id="DiX-tt-Fqk"/>
                         <constraint firstAttribute="bottom" secondItem="g8v-Pd-9C9" secondAttribute="bottom" constant="10" id="Lss-7H-3sc"/>
                         <constraint firstAttribute="trailing" secondItem="g8v-Pd-9C9" secondAttribute="trailing" constant="10" id="Q9F-RU-QdS"/>
                         <constraint firstItem="g8v-Pd-9C9" firstAttribute="top" secondItem="vcX-uZ-4YD" secondAttribute="top" constant="10" id="gpJ-4L-eed"/>
@@ -118,7 +117,7 @@
                 <outlet property="carModelSearchBar" destination="H5e-dK-kTM" id="egf-p3-4mH"/>
                 <outlet property="filterContainerView" destination="g8v-Pd-9C9" id="0H9-1f-Wlr"/>
             </connections>
-            <point key="canvasLocation" x="142.75362318840581" y="296.65178571428572"/>
+            <point key="canvasLocation" x="145.6521739130435" y="307.70089285714283"/>
         </view>
     </objects>
     <resources>
